Fix bugs preventing use as a subproject
This commit fixes seveal bugs preventing the project from being used as
a CMake subproject:

* The Commons module cannot be found because the path to the
cmake_modules folder is constructed relative to the CMAKE_SOURCE_DIR
rather than the CMAKE_CURRENT_SOURCE_DIR.

* googletest is downloaded to the CMAKE_BINARY_DIR rather than the
CMAKE_CURRENT_BINARY_DIR.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project("sparta")
 
 include(CTest)
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 include(Commons)
 
 if (NOT CMAKE_BUILD_TYPE)
